# autocommit

./: .gitignore  README.md  config.example.json  config.toml  pyproject.toml
.github/workflows/: release.yml
autocommit/: main.py
